--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -151,10 +151,11 @@ body.modal-open div.modal-backdrop {
 /*  height: 140px;
   width: 194px;*/
 
-
+#modal-body-product {
+  margin-top: -30px;
+}
 
 .post-modal{
-  font-size: 10px;
   color: black;
 }
 
@@ -539,6 +540,14 @@ body.modal-open div.modal-backdrop {
 }
 #confirm_password:focus {
   outline:none;
+}
+
+#login-form input {
+  font-family: custom;
+}
+
+#modalsignup input {
+  font-family: custom;
 }
 
 #login1 {
@@ -1017,6 +1026,23 @@ body.modal-open div.modal-backdrop {
   opacity: 0.4;
   cursor: pointer
 }
+
+#heartcover {
+  color:red;
+  width: 200px; 
+  height:155px; 
+  background-color: transparent; 
+  opacity: 1; 
+  margin-top: -155px;
+  text-align: center;
+  display:none;
+}
+#heartcover #heart {
+  margin-top: 35px;
+}
+#heartcover #emptyheart {
+  margin-top: 35px;
+}
 .contentinbox:hover {
   cursor: pointer;
 }
@@ -1338,6 +1364,7 @@ body.modal-open div.modal-backdrop {
   outline:none;
 }
 .star {
+  color: #C2272D;
   font-size: 30px;
   position: absolute;
   top: 27px;
@@ -1345,6 +1372,7 @@ body.modal-open div.modal-backdrop {
 }
 
 .blankstar {
+  color: #C2272D;
   font-size: 30px;
   position: absolute;
   top: 27px;
