--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -220,7 +220,7 @@
 
       <ul class="nav navbar-nav navbar-left original">
 
-    <!-- ******** LOGIN ********  -->
+
         <li class="nav-item">
           <a class="nav-link" href="/home">Browse All</a>
         </li>
@@ -327,7 +327,7 @@
                      <h4 class="modal-title" >SIGN UP</h4>
                     </div>
                   <div class="modal-body">
-                  <form name="signup" method="post" action="/signup" enctype="multipart/form-data">
+                  <form id='modalsignup' name="signup" method="post" action="/signup" enctype="multipart/form-data">
                     <ul>
                     <div class = 'signuppage'>
                   <!-- <li>First name</li> -->
