--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -10,7 +10,10 @@
     {{> navbar}}
 
     <div id='profilecontent'>
-      <img id = 'profpic' src="/uploads/{{profpic}}" style='max-width: 250px; max-height: 250px'/>
+      <img id = 'beaverscarf' src="/images/beaverscarf.png" style='width: 450px; height: 350px'/>
+
+      <div id = 'profpic' style='background: no-repeat; background-image: url("/uploads/{{profpic}}"); background-position: center; background-size:210px;'></div>
+
       <img id = 'beaverbubble' src="/images/beaverbubble.png" style='width: 450px; height: 350px'/>
       <div id='profilebox'>
         <h1 id='profilename'> <b>{{profilefirstname}} {{profilelastname}}</b> </h1>
