--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,6 +5,9 @@
 input {
   font-family: custom;
 }
+input:focus {
+  outline: none;
+}
 html {
     height:100%;
 } 
@@ -262,7 +265,7 @@ body.modal-open div.modal-backdrop {
     /* min-height: 200px; */
     /* max-height: 200px; */
     object-fit: cover;
-    z-index: 20;
+    /*z-index: 20;*/
     margin: 30px;
     /* width: 100%; */
     margin-top: 110px;
@@ -321,6 +324,17 @@ body.modal-open div.modal-backdrop {
 }
 .msgProf:hover {
   background-color: #E1E1E1
+}
+
+#update-profile button{
+  background-color: none;
+  border: none;
+}
+#update-profile button:hover{
+  color:#c2272d;
+}
+#update-profile button:focus{
+  outline: none;
 }
 /*ITEM MANAGER STUFF*/
 
@@ -681,18 +695,20 @@ body.modal-open div.modal-backdrop {
 
 
 .twobuttonslog {
+  font-family: custom;
+  margin-bottom: 30px;
   border: none;
-    position: absolute;
-    width: 77px;
-    height: 23px;
+    position: relative;
+    width: 150px;
+    height: 30px;
     background-color: #C1272D;
-    top: 110px;
+    /*top: 110px;*/
     text-align: center;
     color: white;
     font-size: 12px;
     font-family: sans-serif;
     border-radius: 20px;
-    margin-left: -166px;
+    /*margin-left: -166px;*/
 
 }
 .twobuttonslog:focus {
@@ -700,6 +716,7 @@ body.modal-open div.modal-backdrop {
 
 }
 .twobuttonslog:hover {
+  color: white !important; 
   background-color: #a1282d
 }
 
