added new categories

--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -26,7 +26,7 @@
 <textarea class="inputbox" id='description' rows="6" placeholder='Please write a description of your item here.' name='description' cols="50" ></textarea>
 <select id='category' class = id='category' name = 'category'>
               <option value="clothes">Clothes</option>
-              <option value="book">Books</option>
+              <option value="books">Books</option>
               <option value="tech">Tech</option>
               <option value="furniture">Furniture</option>
 </select>
