--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -56,9 +56,12 @@
             <select id='category' class = id='category' name = 'category' required>
               <option selected='selected'>select a category</option>
               <option value="clothes">Clothes</option>
-              <option value="book">Books</option>
+              <option value="books">Books</option>
               <option value="tech">Tech</option>
               <option value="furniture">Furniture</option>
+              <option value="outdoors">Outdoors</option>
+              <option value="kitchen">Kitchen</option>
+              <option value="other">Other</option>
             </select>
             <input id="inserttag" class='addtags' type='text' placeholder='add tag' name='inserttag'>
 
@@ -147,7 +150,7 @@
     <div class="collapse navbar-collapse navHeaderCollapse">
         <ul class="nav navbar-nav navbar-left original">
 
-          <li class="nav-item">
+         <li class="nav-item">
             <a class="nav-link" href="/home">Browse All</a>
           </li>
           <li class="nav-item">
@@ -164,6 +167,15 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/outdoors">Outdoors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/kitchen">Kitchen</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/other"> Other</a>
           </li>
 
         </ul>
@@ -221,24 +233,33 @@
       <ul class="nav navbar-nav navbar-left original">
 
 
-        <li class="nav-item">
-          <a class="nav-link" href="/home">Browse All</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" id='verticalbar'>|</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/clothes">Clothes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/books">Books</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/tech">Tech</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/furniture">Furniture</a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/home">Browse All</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id='verticalbar'>|</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/clothes">Clothes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/books">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/tech">Tech</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/furniture">Furniture</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/outdoors">Outdoors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/kitchen">Kitchen</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/other"> Other</a>
+          </li>
       </ul>
       <!-- Trigger the modal with a button -->
       <ul class="nav navbar-nav navbar-right original">
