--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -270,7 +270,7 @@
 
                   <li><input class="inputbox" id="login1" type="password" placeholder="Password" name="password" ></li>
 
-                  <li><input class="twobuttonslog" id="go" type="submit" value="+ +" style="left: 305px;"></li>
+                  <li><input class="twobuttonslogIN" id="go" type="submit" value="+ +" ></li>
                   <br>
 
                   <li id="login-flash" style="display: none; color: red;">Username or Password Incorrect</li>
