--- a/views/partials/chatbox.hbs
+++ b/views/partials/chatbox.hbs
@@ -22,7 +22,7 @@
         {{/if}}
       {{/each}}
     </ul>
-    <form id='sendmsg' action="">
+    <form action="">
       <input id="m" autocomplete="off" placeholder="enter a message" /><button>Send</button>
     </form>
   </body>
