--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -12,7 +12,7 @@
     <div id='profilecontent'>
       <img id = 'beaverscarf' src="/images/beaverscarf.png" style='width: 450px; height: 350px'/>
 
-      <div id = 'profpic' style='background: no-repeat; background-image: url("/uploads/{{profpic}}"); background-position: center; background-size:210px;'></div>
+      <div id = 'profpic' style='background: no-repeat; position: absolute;background-image: url("/uploads/{{profpic}}"); background-position: center; background-size:210px;'></div>
 
       <img id = 'beaverbubble' src="/images/beaverbubble.png" style='width: 450px; height: 350px'/>
       <div id='profilebox'>
