fixed update item

--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -25,11 +25,15 @@
 <input class="inputbox" id="additemprice" type="number" maxlength="15" placeholder="price ($)" name="price" style='margin-bottom: 10px;border-bottom: solid 1px #ccc; font-family: custom'>
 <textarea class="inputbox" id='description' rows="6" placeholder='Please write a description of your item here.' name='description' cols="50" style='border: solid 1px #ccc; font-family: custom; border-radius: 10px;'></textarea>
 <select id='category' class = id='category' name = 'category' style='color: #B5B5B5; width: 160px'>
-              <option select="select">choose a category</option>
+              <option select="select"></option>
               <option value="clothes">Clothes</option>
               <option value="books">Books</option>
               <option value="tech">Tech</option>
               <option value="furniture">Furniture</option>
+              <option value = 'outdoors'>Outdoors</option>
+              <option value = 'kitchen'>Kitchen</option>
+              <option value = 'other'>Other</option>
+
 </select>
 
 <!--<input id="inserttag" class='addtags' type='text' placeholder='Add Tag' name='inserttag'>-->
