fixed some bugs & added flag

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -22,6 +22,12 @@
                 <input class="twobuttonshome" id="gohome" type="submit" value="+ +" style="left: 300px;">
             </form>
         </div>
+      <div id='flag'>
+        <img id='pole' src='/images/pole.png' style='width: 150px;position: absolute; right: 176px; transform: rotate(-12deg); top: 220px; z-index: 0'>
+        <img id='ribbon' src='/images/ribbon.png' style='z-index: 0;position: absolute; right: 120px; max-width: 150px; top: 235px;transform: rotate(168deg);'>
+        <a id='ribbontext' style='z-index: 1;transform: rotate(-12deg);font-size: 16pt; color: white; position: absolute; font-family: custom; right: 180px; top: 263px;'>M I T !</a>
+        
+      </div>
     </div>
 
     
@@ -43,6 +49,7 @@
 
   <script src="/scripts/sortby.js"></script>
   <script src="/scripts/staritem.js"></script>
+  <script src='/scripts/ribbon.js'></script>
 
 
   </body>
