--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -301,7 +301,7 @@
               
               <form id = 'forgot-pass-form'>
 
-              <input class="twobuttonsfog" id="go" type="submit" value="Forgot Password?" style="left: 300px;">
+              <input class="twobuttonsfog" id="go" type="submit" value="Forgot Password?" style="left: 300px; font-family: custom">
               </form>
               
               <div id = 'forgotpassword' style = 'display:none'>
