--- a/public/stylesheets/chat.css
+++ b/public/stylesheets/chat.css
@@ -18,7 +18,7 @@ form {
   bottom: 0px; 
   position: absolute;
   right: 160px;
-  bottom: -140px;
+  bottom: 50px;
 }
 
 form input { 
@@ -66,7 +66,7 @@ form button {
   overflow:   auto;
   position:   absolute;
   right: 175px;
-  bottom: 0px;
+  bottom: 100px;
   width: 405px;
   max-height: 65%;
 }
@@ -100,7 +100,7 @@ form button {
   margin-left: 60px;
 }
 #nochat {
-  position: fixed;
+  position: relative;
   top: 330px;
   right: 160px;
   width: 365px;
