--- a/views/general-chat.hbs
+++ b/views/general-chat.hbs
@@ -5,7 +5,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src='/scripts/general-chat.js'></script>
-    <link rel="stylesheet" href='/stylesheets/chat.css'>
+    <link rel="stylesheet" href='/stylesheets/genchat.css'>
     <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
