--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -237,7 +237,7 @@ body.modal-open div.modal-backdrop {
 
 #beaverscarf{
 
-  margin-left: 8%;
+  margin-left: 13%;
   margin-top: 55px;
   position: absolute;
 
@@ -250,7 +250,7 @@ body.modal-open div.modal-backdrop {
   width: 100%;
   height: 360px;
   /*background-color: #F3F3F3;*/
-  margin-top: 94px;
+  margin-top: 20px;
 /*  margin-left: 170px;*/
   border-bottom: solid 5px black;
   background-color: #c9c9c9;
@@ -260,8 +260,8 @@ body.modal-open div.modal-backdrop {
 }
 
 #profpic {
-    width: 267px;
-    height: 210px;
+    min-width: 267px;
+    min-height: 222px;
     /* min-height: 200px; */
     /* max-height: 200px; */
  
@@ -272,8 +272,9 @@ body.modal-open div.modal-backdrop {
     /*z-index: 20;*/
     margin: 30px;
     /* width: 100%; */
-    margin-top: 110px;
-    margin-left: 21%;
+    margin-top: 104px;
+    margin-left: 25%;
+    margin
     border-radius: 20px;
     padding: 10px;
     position: absolute;
@@ -284,7 +285,7 @@ body.modal-open div.modal-backdrop {
   overflow: auto;
   margin-top: 105px;
   /*background-color: red;*/
-  width: 267px;
+  width: 264px;
   height: 220px;
   margin-left: 54%;
   position: absolute;
@@ -299,18 +300,18 @@ body.modal-open div.modal-backdrop {
     -webkit-appearance: none;
 }
 #profilebox::-webkit-scrollbar:vertical {
-    width: 11px;
+    width: 6px;
 }
 #profilebox::-webkit-scrollbar:horizontal {
     height: 11px;
 }
 #profilebox::-webkit-scrollbar-thumb {
     border-radius: 4px;
-    border: 3px solid white; /* should match background, can't be transparent */
+    /*border: 3px solid white;  should match background, can't be transparent */
     background-color: rgba(0, 0, 0, .5);
 }
 #profilebox::-webkit-scrollbar-track { 
-    background-color: #fff; 
+    background-color: transparent; 
     border-radius: 8px; 
 } 
 
