forgot password displays correct message

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -313,9 +313,10 @@
                 <li><input class="inputbox" id="login1" type="text" placeholder="Email" name="recoveremail" ></li>
                 <br>
                 <br>
-                
                 <li><input class="twobuttonsforgot" id="go" type="submit" value="+ +" style="left: 300px; margin-bottom: 180px;"></li>
                  <li id="forgot-flash" style="display: none; color: red;">That email does not exist!</li>
+                <li id="forgot-flash-s" style="display: none; color: green;">An email with further instructions has been sent.</li>
+
               </div>
               </ul>
               </form>
