change some ++ button names

--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -65,7 +65,7 @@
             </select>
             <input id="inserttag" class='addtags' type='text' placeholder='add tag' name='inserttag'>
 
-            <input class="twobuttonsaddtag" id="addtag" type="button" value="+ +">
+            <input class="twobuttonsaddtag" id="addtag" type="button" value="add">
 
 <!--             <button id="addtag" class="btn btn-default" type='button'>add</button><br> -->
             <div id="tags"></div>
@@ -73,7 +73,7 @@
             <div id='uploadphoto'>upload a photo:</div> 
             <input type="file" name="picture" id='submititempic'/>
 
-            <input class="twobuttonsadditem" id="submititem" type="submit" value="+ +" style="left: 300px;">
+            <input class="twobuttonsadditem" id="submititem" type="submit" value="list it!" style="left: 300px;">
 
             </form>
         </div>
@@ -291,7 +291,7 @@
 
                   <li><input class="inputbox" id="login1" type="password" placeholder="Password" name="password" ></li>
 
-                  <li><input class="twobuttonslogIN" id="go" type="submit" value="+ +" ></li>
+                  <li><input class="twobuttonslogIN" id="go" type="submit" value="Login" ></li>
                   
 
                   <li id="login-flash" style="display: none; color: red;">Username or Password Incorrect</li>
@@ -313,7 +313,7 @@
                 <li><input class="inputbox" id="login1" type="text" placeholder="Email" name="recoveremail" ></li>
                 <br>
                 <br>
-                <li><input class="twobuttonsforgot" id="go" type="submit" value="+ +" style="left: 300px; margin-bottom: 180px;"></li>
+                <li><input class="twobuttonsforgot" id="go" type="submit" value="Reset Password" style="left: 300px; margin-bottom: 180px;"></li>
                  <li id="forgot-flash" style="display: none; color: red;">That email does not exist!</li>
                 <li id="forgot-flash-s" style="display: none; color: green;">An email with further instructions has been sent.</li>
 
@@ -393,7 +393,7 @@
                       <!--<li> <input type = 'file' style = 'font-size:14pt; padding:4px; margin:7px' placeholder = 'Upload photo (optional)' name ='picture'></li>-->
 
 
-                      <li><input name = 'signupbutton' class="twobuttonssign" id="signupbutton1" type="submit" value="+ +" style="left: 300px;"></li>
+                      <li><input name = 'signupbutton' class="twobuttonssign" id="signupbutton1" type="submit" value="Sign Up" style="left: 300px;"></li>
                     </div>
                     </ul>
                   </form>
