--- a/views/partials/item_manager_partial.hbs
+++ b/views/partials/item_manager_partial.hbs
@@ -23,7 +23,7 @@
 <input type = 'text' name = 'newname' id = 'newitemname' placeholder = 'new item name' style='border:none; border-bottom: solid 1px #ccc; font-size: 12pt'>
 <input type = 'hidden' value = {{id}} name = itemid>
 <input class="inputbox" id="additemprice" type="number" maxlength="15" placeholder="price ($)" name="price" style='margin-bottom: 10px;border-bottom: solid 1px #ccc; font-family: custom'>
-<textarea class="inputbox" id='description' rows="6" placeholder='Please write a description of your item here.' name='description' cols="50" style='border: solid 1px #ccc; font-family: custom; border-radius: 10px;'></textarea>
+<textarea class="inputbox" id='description' rows="6" placeholder='Please write a new description of your item here.' name='description' cols="50" style='border: solid 1px #ccc; font-family: custom; border-radius: 10px;'></textarea>
 <select id='category' class = id='category' name = 'category' style='color: #B5B5B5; width: 160px'>
               <option select="select"></option>
               <option value="clothes">Clothes</option>
@@ -40,7 +40,7 @@
 
 <!--<li><input class="twobuttonsaddtag" id="addtag" type="button" value="+ +" style="left: 300px;"></li>-->
 <!--<div id="tags"></div>-->
-<br><br>upload photo: 
+<br><br>upload a new photo: 
 <input id = 'picture' type="file" name="picture" style='position:relative; margin-top: -18px; margin-left: 100px;'/>
 
 <li><input class="twobuttonsadditem" id="submititem{{id}}" type="submit" value="confirm" style="font-family: custom; color: #000; left: 150px; background-color: #fff; border: solid 1px #ccc"></li>
