--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -301,19 +301,19 @@
               
               <form id = 'forgot-pass-form'>
 
-              <input class="twobuttonsfog" id="go" type="submit" value="Forgot Password?" style="left: 300px; font-family: custom">
+              <input class="twobuttonsfog" id="go" type="submit" value="Forgot Password?" style="left: 300px; font-family: custom;">
               </form>
               
               <div id = 'forgotpassword' style = 'display:none'>
               <form name = 'passwordreset' method = 'post' id = 'forgot-pass' action= '/forgot'>
               <ul>
 
-              <div id = 'forgotpass'>
+              <div id = 'forgotpass' style='margin-top: 100px;'>
 
-                <li><input class="inputbox" id="login1" type="text" placeholder="Email" name="recoveremail" ></li>
+                <li><input class="inputbox" id="login1" type="text" placeholder="Email" name="recoveremail" style='margin:0px'></li>
                 <br>
                 <br>
-                <li><input class="twobuttonsforgot" id="go" type="submit" value="+ +" style="left: 300px; margin-bottom: 180px;"></li>
+                <li><input class="twobuttonsforgot" id="go" type="submit" value="+ +" style="left: 300px; margin-bottom: 160px;"></li>
                  <li id="forgot-flash" style="display: none; color: red;">That email does not exist!</li>
                 <li id="forgot-flash-s" style="display: none; color: green;">An email with further instructions has been sent.</li>
 
