--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -314,7 +314,7 @@
                 <br>
                 <br>
                 <li><input class="twobuttonsforgot" id="go" type="submit" value="+ +" style="left: 300px; margin-bottom: 160px;"></li>
-                 <li id="forgot-flash" style="display: none; color: red;">That email does not exist!</li>
+                 <li id="forgot-flash" style="display: none; color: red;">That email does not exist!</li><br>
                 <li id="forgot-flash-s" style="display: none; color: green;">An email with further instructions has been sent.</li>
 
               </div>
